--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            padding: 10px;
+        }
         body{
             background-image: url(https://domf5oio6qrcr.cloudfront.net/medialibrary/10245/GettyImages-1098018152.jpg);
-            height: 100vh;
          background-size: cover;
          background-position: center;
          background-repeat: no-repeat;
@@ -18,6 +20,7 @@
         p,ol{
             padding: 10px;
              font-size: 20px;
+            
         }
           </style>
 </head>
