--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         @media screen and (max-width: 480px){
             ol{
-               background-color: white;
+               /* background-color: white; */
                margin-left: 10px;
                
             }
