--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pollution</title>
     <style>
         *{
             padding: 10px;
@@ -52,19 +52,22 @@ Although environmental pollution can be caused by natural events, the word pollu
 <h2>Types of pollution</h2>
 <ol>
     <li>
-        <a href="air.html">
+        <a href="./air.html">
              <button>Air Pollution</button>
         </a>
       
     </li>
     <li> 
-        <a href="water.html">
+        <a href="./water.html">
             <button>Water Pollution</button>
          
         </a>
     </li>
-    <li>Land Pollution</li>
-    <li>Noise Pollution</li>
+   
+    <li>
+      <a href="./noise.html">
+    <button> Noise Pollution</button>   
+    </a> </li>
 </ol>
 </body>
 </html>
