--- a/air.html
+++ b/air.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Air Pollution</title>
     <style>
          *{
             padding: 10px;
@@ -18,7 +18,16 @@
         p,ol{
             font-size: 20px;
         }
-        
+        button{
+            padding :10px 20px;
+            border-radius: 10px;
+            background-color: blue;
+            color: white;
+        }
+        button:hover{
+            background-color: white;
+            color: blue;
+        }
   @media screen and (max-width: 480px) {
  img{
     width: 250px;
@@ -40,14 +49,21 @@ Household combustion devices, motor vehicles, industrial facilities and forest f
 
 <ol>
     <li>
-        <a href="index.html">
-              Pollution
+        <a href="./index.html">
+             <button>Pollution</button> 
         </a>
       
     </li>
-    <li>Water Pollution</li>
-    <li>Land Pollution</li>
-    <li>Noise Pollution</li>
+    <li>
+        <a href="./water.html">
+           <button> Water Pollution</button>
+        </a>
+    </li>
+    <li>
+        <a href="./noise.html">
+            <button>Noise Pollution</button>
+        </a>
+    </li>
 </ol>
 </body>
 </html>
